tests/unit/language/policy/errors/provable_oob_rejected.arche
// A constant index provably outside [0, N) is a compile error (E0097) — a statically-wrong access,
// not something a policy can fix. The error fires even WITH a policy: a literal OOB is never a
// runtime case. (An unprovable/runtime index is what gets a policy; see bounds_clamp_read.arche.)
// RUN: %arche build -o %t %s > %t.out 2>&1 ; grep -qi "provably out of bounds\|E0097" %t.out
#import { fmt }
main :: proc() {
  a: [4]int;
  x := a[9] !clamp; // literal 9 on int[4] -> provably OOB, E0097 even with !clamp
  fmt.printf("%d\n", x);
}